README/FAQ Revisions
Held off on certain revisions until those portions are accessible and built like some of the formatting for the wiki pages that aren't live yet. Added in direct examples and links to YouTube Instructional videos to README. Will Make separate issue as reminder to re-record both videos showing the updated README in the videos